iptables-rules
# Generated by iptables-save v1.8.11 (nf_tables) on Mon Jul  7 00:56:39 2025
*filter
:INPUT ACCEPT [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A INPUT -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A INPUT -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A INPUT -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A INPUT -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A INPUT -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A INPUT -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A INPUT -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A INPUT -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A INPUT -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A INPUT -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A INPUT -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A INPUT -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A INPUT -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A INPUT -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A INPUT -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A INPUT -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A INPUT -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A INPUT -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A FORWARD -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A FORWARD -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A FORWARD -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A FORWARD -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A FORWARD -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A FORWARD -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A FORWARD -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A FORWARD -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A FORWARD -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A FORWARD -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A FORWARD -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A FORWARD -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A FORWARD -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A FORWARD -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A FORWARD -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A FORWARD -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A FORWARD -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A FORWARD -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A FORWARD -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A FORWARD -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A FORWARD -m mac --mac-source 4a:6c:17:bd:70:eb -j DROP
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Mon Jul  7 00:56:39 2025
# Generated by iptables-save v1.8.11 (nf_tables) on Mon Jul  7 00:56:39 2025
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Mon Jul  7 00:56:39 2025
